--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "expo": "~46.0.16",
+    "expo-camera": "~12.3.0",
+    "expo-media-library": "~14.2.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-dom": "^18.2.0",
+    "react-native": "0.69.6",
+    "react-native-maps": "^1.3.2",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
