--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.69.6",
     "react-native-maps": "^1.3.2",
+    "react-native-view-shot": "^3.5.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
